--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@tailwindcss/typography": "^0.5.19",
@@ -17,6 +19,7 @@
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "openai": "^5.23.1",
     "postcss": "^8.5.6",
