--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,7 +83,7 @@ services:
     depends_on:
       - collector
     ports:
-      - "8001:8001"
+      - "8004:8004"
     restart: unless-stopped
     env_file:
       - .env
@@ -92,9 +92,9 @@ services:
     working_dir: /app
     volumes:
       - ./llm:/app
-    command: ["uvicorn", "simple_server:app", "--host", "0.0.0.0", "--port", "8001"]
+    command: ["python", "real_agent_server.py"]
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8004/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -114,7 +114,7 @@ services:
       - .env
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - LLM_SERVICE_URL=http://llm:8001
+      - LLM_SERVICE_URL=http://llm:8004
 
 volumes:
   pg_data:
